--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,7 @@ html {
 
 body {
     background: #fbcd1f;
-    font-family: 'montserratregular', Arial, Helvetica, sans-serif;
+    font-family: 'montserratsemibold', Arial, Helvetica, sans-serif;
     min-height: 100vh;
 }
 
@@ -51,6 +51,14 @@ body {
 
 .header-section img {
     max-width: 200px;
+}
+
+#video {
+    display: none;
+}
+
+#countdown {
+    font-family: 'montserratbold', Arial, Helvetica, sans-serif;
 }
 
 /*
@@ -98,7 +106,6 @@ body {
     width: 60%;
     margin: 0 20%;
 }
-
 
 @media only screen and (max-width: 768px) {
     .lineup {
